--- a/logout.html
+++ b/logout.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Button hover effects with box-shadow</title>
+  <title>Logout</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300" rel="stylesheet">
 <link rel="stylesheet" href="./logoutstyle.css">
 
