--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <h2>Morbium</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="#">
+		<form>
 			<h1>Create Account</h1>
 			<span>use your email for registration</span>
 			
@@ -21,7 +21,7 @@
 		</form>
 	</div>
 	<div id="login_div" class="form-container sign-in-container">
-		<form action="#">
+		<form>
 			<h1>Sign in</h1>
 			<span>or use your account</span>
 			<input type="email" placeholder="Email" id="email_field" />
@@ -30,11 +30,6 @@
 			<button onclick="login()">Login to Account</button>
 		</form>
 	</div>
-	<div id="user_div" class="loggedin-div">
-   
-		<h1 id="user_para">LOADING...</h1>
-		
-	  </div>
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-left">
