--- a/login.html
+++ b/login.html
@@ -7,28 +7,11 @@
 
 </head>
 <body>
-	  <script  src="./loginscript.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-		apiKey: "AIzaSyCrztheZUFM5gDUFTDWdRMxEMtvql8FaGE",
-    authDomain: "morbium-373da.firebaseapp.com",
-    databaseURL: "https://morbium-373da.firebaseio.com",
-    projectId: "morbium-373da",
-    storageBucket: "morbium-373da.appspot.com",
-    messagingSenderId: "771426120630",
-    appId: "1:771426120630:web:309fefb5d3b2fdedaf4717",
-    measurementId: "G-DQ8F1DWQ8Q"
-                        };
-                        firebase.initializeApp(config);
-  </script>
-  <script src="index.js"></script>
 <!-- partial:index.partial.html -->
 <h2>Morbium</h2>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form>
+		<form action="#">
 			<h1>Create Account</h1>
 			<span>use your email for registration</span>
 			
@@ -38,7 +21,7 @@
 		</form>
 	</div>
 	<div id="login_div" class="form-container sign-in-container">
-		<form>
+		<form action="#">
 			<h1>Sign in</h1>
 			<span>or use your account</span>
 			<input type="email" placeholder="Email" id="email_field" />
@@ -68,7 +51,23 @@
 	</div>
 </div>
 <!-- partial -->
-
+  <script  src="./loginscript.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+		apiKey: "AIzaSyCrztheZUFM5gDUFTDWdRMxEMtvql8FaGE",
+    authDomain: "morbium-373da.firebaseapp.com",
+    databaseURL: "https://morbium-373da.firebaseio.com",
+    projectId: "morbium-373da",
+    storageBucket: "morbium-373da.appspot.com",
+    messagingSenderId: "771426120630",
+    appId: "1:771426120630:web:309fefb5d3b2fdedaf4717",
+    measurementId: "G-DQ8F1DWQ8Q"
+                        };
+                        firebase.initializeApp(config);
+  </script>
+  <script src="index.js"></script>
 
 </body>
 </html>
