--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 			
 			<input type="email" placeholder="Email" id="email_fieldx" />
 			<input type="password" placeholder="Password" id="password_fieldx" />
-			<button onclick="signup()">Register</button>
+			<button onclick="signup()" type="button">Register</button>
 		</form>
 	</div>
 	<div id="login_div" class="form-container sign-in-container">
@@ -27,7 +27,7 @@
 			<input type="email" placeholder="Email" id="email_field" />
 			<input type="password" placeholder="Password" id="password_field" />
 			<a href="forgotpassword.html">Forgot your password?</a>
-			<button onclick="login()">Login to Account</button>
+			<button onclick="login()" type="button">Login to Account</button>
 		</form>
 	</div>
 	<div id="user_div" class="loggedin-div">
