--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Morbium</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css'><link rel="stylesheet" href="./loginstyle.css">
-
+<script src="mobile.js"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
