--- a/index.html
+++ b/index.html
@@ -109,10 +109,13 @@
 
                 <div class="home-content__buttons">
                     <a href="login.html" class="btn btn--stroke">
-                        Start a Project
+                        Start Online
                     </a>
-                    <a href="#about" class="smoothscroll btn btn--stroke">
-                        More About Us
+                    <a href="download.html" class="smoothscroll btn btn--stroke">
+                        Download
+                    </a>
+                    <a href="learn.html" class="smoothscroll btn btn--stroke">
+                        Learn
                     </a>
                 </div>
 
