--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                     <a href="login.html" class="btn btn--stroke">
                         Start Online
                     </a>
-                    <a href="download.html" class="smoothscroll btn btn--stroke">
+                    <a href="download.html" class="btn btn--stroke">
                         Download
                     </a>
-                    <a href="learn.html" class="smoothscroll btn btn--stroke">
+                    <a href="learn.html" class="btn btn--stroke">
                         Learn
                     </a>
                 </div>
