--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                     <a href="download.html" class="btn btn--stroke">
                         Download
                     </a>
-                    <a href="learn.html" class="btn btn--stroke">
+                    <!-- <a href="learn.html" class="btn btn--stroke">
                         Learn
-                    </a>
+                    </a> -->
                 </div>
 
             </div>
